--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@tensorflow/tfjs-node": "^1.5.2",
     "@tensorflow/tfjs-vis": "^1.4.0",
+    "aes-js": "^3.1.2",
     "axios": "^0.19.2",
     "jimp": "^0.9.3",
     "jsdom": "^16.1.0",
